--- a/package.json
+++ b/package.json
@@ -42,9 +42,14 @@
         "@babel/preset-env": "^7.28.3",
         "@rollup/plugin-babel": "^6.0.4",
         "@rollup/plugin-commonjs": "^25.0.8",
+        "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.3.1",
+        "@rollup/plugin-replace": "^5.0.7",
         "@rollup/plugin-terser": "^0.4.4",
+        "autoprefixer": "^10.4.21",
         "bestzip": "^2.2.1",
+        "cssnano": "^6.1.2",
+        "gscan": "^5.1.0",
         "postcss": "^8.5.6",
         "postcss-import": "^15.1.0",
         "postcss-preset-env": "^8.5.1",
